archive/rpi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: rb.phantombyte.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rb-service
                port:
                  number: 80
    - host: monitoring.phantombyte.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
